@@ -3,9 +3,16 @@ from os.path import abspath
 
 from build.project import Project
 from build.zlib import ZlibProject
+from build.meson import MesonProject
 from build.autotools import AutotoolsProject
 from build.ffmpeg import FfmpegProject
 from build.boost import BoostProject
+
+libmpdclient = MesonProject(
+    'https://www.musicpd.org/download/libmpdclient/2/libmpdclient-2.14.tar.xz',
+    '0a84e2791bfe3077cf22ee1784c805d5bb550803dffe56a39aa3690a38061372',
+    'lib/libmpdclient.a',
+)
 
 libogg = AutotoolsProject(
     'http://downloads.xiph.org/releases/ogg/libogg-1.3.3.tar.xz',
