@@ -76,6 +76,7 @@ class CrossGccToolchain:
 # a list of third-party libraries to be used by MPD on Android
 from build.libs import *
 thirdparty_libs = [
+    libmpdclient,
     libogg,
     libvorbis,
     opus,
